fix clip compatability on safari

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -11,7 +11,7 @@
 
 .content {
   height: calc(100vh - 10rem - 10rem);
-  overflow: clip;
+  overflow: hidden;
 
   display: flex;
   flex-direction: row;
